# papycli

./: .claudeignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  README.ja.md  README.md  design_doc.md  mkdocs.yml  pyproject.toml  release-please-config.json
.claude/: settings.json
.claude/rules/: cli-spec.md  data-format.md  workflow.md
.github/: copilot-instructions.md
.github/workflows/: copilot-review.yml  docs.yml  release-please.yml  release.yml
design/: 2026-03-27-completion-static-script.md  2026-03-28-claude-md-simplification-plan.md  2026-03-28-claude-md-simplification.md  design_doc.md
docs/: development.md  index.md  installation.md  reference.md
docs/ja/: index.md  installation.md  plugins.md  reference.md
docs/superpowers/plans/: 2026-04-01-config-add-upgrade.md  2026-04-02-dotenv-autoload.md  2026-04-18-config-use-completion-hint.md
docs/superpowers/specs/: 2026-04-01-config-add-upgrade-design.md  2026-04-02-dotenv-autoload-design.md
examples/redmine/: Dockerfile  README.md  docker-compose.yml  docker-init.sh
examples/request_filter/: README.md  pyproject.toml
examples/request_filter/src/papycli_debug_filter/: __init__.py
examples/response_filter/: README.md  pyproject.toml
examples/response_filter/src/papycli_debug_response_filter/: __init__.py
manual/: index.md  plugins.md  quickstart.md  reference.md
manual/ja/: development.md  index.md  quickstart.md  reference.md
src/papycli/: __init__.py  api_call.py  checker.py  completion.py  config.py  filters.py  i18n.py  init_cmd.py  main.py  request_filter.py  response_checker.py  spec_loader.py  summary.py
tests/: conftest.py  test_api_call.py  test_checker.py  test_completion.py  test_config.py  test_filters.py  test_i18n.py  test_init_cmd.py  test_main.py  test_request_filter.py  test_response_checker.py  test_spec_loader.py
tests/integration/: conftest.py  test_integration.py
tests/unittest/: test_api_call.py  test_checker.py  test_completion.py  test_config.py  test_filters.py  test_init_cmd.py  test_main.py  test_response_checker.py  test_spec_loader.py  test_summary.py
