[project]
name = "papycli"
version = "0.1.0"
description = "A CLI tool to call REST APIs defined in OpenAPI 3.0 specs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "requests>=2.32",
    "rich>=13.0",
    "pyyaml>=6.0",
]

[project.scripts]
papycli = "papycli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/papycli"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "responses>=0.25",
    "ruff>=0.9",
    "mypy>=1.11",
    "types-requests>=2.32",
    "types-pyyaml>=6.0",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
strict = true
python_version = "3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
