[project]
name = "papycli"
version = "0.13.0"
description = "A CLI tool to call REST APIs defined in OpenAPI 3.0 specs"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "tmonj1", email = "tmonj1@gmail.com"},
]
requires-python = ">=3.12"
keywords = ["api", "openapi", "cli", "rest", "http"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.1",
    "requests>=2.32",
    "rich>=13.0",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/tmonj1/papycli"
Repository = "https://github.com/tmonj1/papycli"
Documentation = "https://tmonj1.github.io/papycli/"
"Bug Tracker" = "https://github.com/tmonj1/papycli/issues"

[project.scripts]
papycli = "papycli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/papycli"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-httpserver>=1.1",
    "responses>=0.25",
    "ruff>=0.9",
    "mypy>=1.11",
    "types-requests>=2.32",
    "types-pyyaml>=6.0",
    "pre-commit>=4.5.1",
]
docs = [
    "mkdocs-material>=9.5",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
strict = true
python_version = "3.12"

[tool.pytest.ini_options]
testpaths = ["tests/unittest", "tests/integration"]
markers = [
    "integration: end-to-end tests that spawn a real subprocess and HTTP server",
]
addopts = "-m 'not integration'"
