[project]
name = "papycli-debug-filter"
version = "0.1.0"
description = "A papycli request filter plugin that prints request context to stdout"
requires-python = ">=3.12"
dependencies = [
    "papycli>=0.6.0",
]

[project.entry-points."papycli.request_filters"]
debug = "papycli_debug_filter:request_filter"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/papycli_debug_filter"]
