[project]
name = "papycli-debug-response-filter"
version = "0.1.0"
description = "A papycli response filter plugin that prints response context to stderr"
requires-python = ">=3.12"
dependencies = [
    "papycli>=0.7.0",
]

[project.entry-points."papycli.response_filters"]
debug = "papycli_debug_response_filter:response_filter"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/papycli_debug_response_filter"]
